@@ -1,3 +1,10 @@
+2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
+	* src/TextThought.py
+	Fix theme colors. Use theme colors for text selection. Reduce
+	code.
+
 2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/Links.py
